css/style.css
body {
    width: 100%;
    max-width: 1024px;
    margin: 0px auto;
    font-family: 'Big Shoulders Display', cursive;
}

.logo {
    width: 32px;
    height: 32px;
}

a .logo {
    margin: 10px 10px;
}

a:link img{
    filter: grayscale(1);
}

a:hover img{
    filter: grayscale(0);
}

.card-image a {
    display: inline-block;
    height: 100%;
    width: 100%;
}

::selection {
    color: white;
    background-color: black;
}

a {
    font-size: 28px;
    text-decoration: none;
}

.avatar {
    width: 180px;
    height: 180px;
    border-radius: 50%;
}

header {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
}

.header-links-mob {
    display: none;
}

h1 {
    display: flex;
    justify-content: center;
    letter-spacing: 20px;
}

.header-links {
    display: flex;
    justify-content: space-between;
}

a {
    display: flex;
    align-items: center;
    text-decoration: none;
}

.education__header {
    margin-top: 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 15px 0 15px;
    border-top: 1px solid #000;
    border-bottom: 1px solid #000;
}

.swiper-button-prev {
    background-image: url("../assets/arrow_left.svg");
}

.swiper-button-next {
    background-image: url("../assets/arrow_right.svg");
}

.education__header:hover {
    cursor: pointer;
}

.education__header_arrow > svg {
    cursor: pointer;
    transition: 300ms;
}

.hidden {
    display: none;
}

li {
    letter-spacing: 1px;
    font-size: 24px;
}

li:not(:first-child) {
    margin-top: 20px;
}

.projects h2 {
    padding-left: 15px;
}

.swiper-container {
    box-sizing: border-box;
    max-width: 1024px;
    padding: 0px 42px;
    border: 2px solid #000;
    background-color: #fff;
}
  
.swiper-top_panel,
.swiper-bottom_panel {
    display: none;
    align-items: center;
    justify-content: space-between;
    position: absolute;
    height: 62px;
    width: 100%;
    left: 0;
    top: 0px;
}

.swiper-top_panel p {
    margin-left: 10%;
}

.swiper-button {
    margin-right: 10%;
}

.swiper-bottom_panel {
    justify-content: center;
    top: auto;
    bottom: 0px;
}
  
.swiper-button {  
    display: block;
    width: 42px;
    height: 42px;
    border-radius: 50%;
    border: 0;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
  
.swiper-button:focus {
    outline: 0;
}
  
.swiper-button:active {
    box-shadow: none;
}
  
.card {
    display: flex;
    justify-content: space-between;
    align-items: center;
    overflow: hidden;
    position: relative;
    background: #fff;
}
  
.card-description {
    box-sizing: border-box;
    width: 50%;
    height: 280px;
    padding: 10px 20px;
}
  
.card-title {
    font-weight: normal; 
    perspective: 500px;
    margin: 10px;
}
  
.card-title span {
    margin-right: 10px;
    font-size: 24px;
    font-weight: bold;
}
  
.card-list {
    list-style: none;
    margin: 0 0 20px;
}
  
.card-list li {
    padding: 7px 0;
    font-weight: lighter;
}
  
.card-list li::before {
    display: inline-block; 
    width: 18px;
    margin-left: -18px;
}
  
.card-button {
    font-size: 14px;
    display: inline-block;
    border-radius: 2px;
    padding: 12px 35px 12px 20px;
    margin: 5px 5px 20px 10px;
    background-color: #fff;
    text-align: left;
    font-weight: lighter;
    background-image: url("../assets/arrow_right.svg");
    background-repeat: no-repeat;
    background-position: right center;
}
  
.card-button:focus {
    outline: none;
}
  
.card-image {
    width: 50%;
    height: 320px;
    background-color: var(--light-color);
    background-size: cover;
}
  
.card-image a {
    display: block;
    width: 100%;
    height: 100%;
}
  
.card-image--project1 {
    background-image: url("../assets/project1.png");
}
  
.card-image--project2 {
    background-image: url("../assets/project2.png");
}
  
.footer {
    position: absolute;
    width: 100%; 
    height: 40px;
    bottom: 0;
}
  
.footer-container {
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    max-width: 1024px;
    margin: 0 auto;
    padding: 10px 30px;
    font-size: 14px;
}
  
@media screen and (max-width: 1024px) {
    .header {
        margin: 0 10px;
    }
    
    .contacts-list {
        display: flex;
        width: 170px;
        margin: 0 auto;
        justify-content: space-between;
    }
    
    .contacts-item {
        width: 32px;
        padding: 0;
        margin: 0;
        font-size: 0;
        transition: .3s;
    }
  
    .contacts-item::after {
        content: none;
    }
    
    .contacts-item::before {
        display: block;
    }
      
    .contacts-item:hover::before {
        opacity: 1;
    }
}
  
@media screen and (max-width: 720px) {
    .header {
        flex-direction: column;
        justify-content: center;    
        align-items: center;
    }
    
    .header-logo {
        margin-bottom: 40px;
    }

    .contacts-link {
        letter-spacing: 0;
    }
    
    .swiper-container { 
        padding: 62px 20px;
    }
    
    .swiper-button-prev,
    .swiper-button-next {
        width: 22px;
        color: #fff;
        background-image: none;
        top: 2px;
    }
     
    .card-description {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        position: absolute;
        top: 0; 
        left: 0; 
        background-color: #fff;
        width: 100%; height: 100%;
        opacity: 0;
        transition: opacity .5s;
    }
    
    .card-button {
        display: none;
    }
    
    .card-image {
        width: 100%;
        height: 320px; 
        transition: .5s;
    }
    
    .swiper-top_panel,
    .swiper-bottom_panel {
        display: flex;
    }
    
    .visible {
        opacity: 1;
    }
}
  
  
@media screen and (max-width: 380px) {
    h1 {
        font-size: 25px;
        letter-spacing: 6px;
        margin-bottom: 0;
    }
}

@media screen and (max-width: 560px) {
    header {
        display: flex;
        flex-wrap: wrap;
    }
    .header-logo {
        margin: 0 auto;
    }
    .header-links {
        display: none;
    }
    .header-links-mob {
        display: flex;
        width: 100%;
        justify-content: center;
    }
    .header-descr {
        width: 100%;
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        max-height: 100px;
    }
}

